mise en place du header html

--- a/images/index.html
+++ b/images/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projet2--Réservia</title>
 </head>
 <body>
     <header>
         <p><img src="/images/logo/Reservia@3x.png" alt=""></p>
+        <nav>
+            <ul>
+                <li><a href="#Hébergements"></a>Hébergements</li>
+                <li><a href="#Activités"></a>Activités</li>
+                <li><a href="#"></a>S'inscrire</li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
