--- a/images/index.html
+++ b/images/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <p><img src="/images/logo/Reservia@3x.png" alt=""></p>
-        <nav>
+        <nav class="menu">
             <ul>
-                <li><a href="#Hébergements"></a>Hébergements</li>
-                <li><a href="#Activités"></a>Activités</li>
-                <li><a href="#"></a>S'inscrire</li>
+                <li><a href="#Hébergements">Hébergements</a></li>
+                <li><a href="#Activités">Activités</a></li>
+                <li><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
     </header>
