--- a/images/index.html
+++ b/images/index.html
@@ -8,9 +8,9 @@
     <title>Projet2--Réservia</title>
 </head>
 <body>
-    <header>
-        <p><img src="/images/logo/Reservia@3x.png" alt=""></p>
-        <nav class="menu">
+    <header class="header">
+        <p class="header__logo"><img src="/images/logo/Reservia@3x.png" alt=""></p>
+        <nav class="header__nav header__nav--mobile">
             <ul>
                 <li><a href="#Hébergements">Hébergements</a></li>
                 <li><a href="#Activités">Activités</a></li>
