--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
                 <li><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
+        <div class ="mobile" >
+            <div class="mobile__header">
+                <img src="/images/logo/Reservia@3x.png" alt="">
+                <p><a href="#">S'inscrire</a></p>
+            </div>
+            
+            <ul>
+                <li><a href="#">Hébergements</a></li>
+                <li><a href="#">Activités</a></li>
+            </ul>
+        </div>
     </header>
 </body>
 </html>
