--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet"> 
     <title>Projet2--Réservia</title>
 </head>
+
 <body>
     <header class="header">
-        <p class="header__logo"><img src="/images/logo/Reservia@3x.png" alt=""></p>
-        <nav class="header__nav header__nav--mobile">
+        <p class="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
+        <nav class="header__nav ">
             <ul>
                 <li><a href="#Hébergements">Hébergements</a></li>
                 <li><a href="#Activités">Activités</a></li>
                 <li><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
-        <div class ="mobile" >
+        <div class="mobile">
             <div class="mobile__header">
-                <img src="/images/logo/Reservia@3x.png" alt="">
+                <img src="images/logo/Reservia@3x.png" alt="">
                 <p><a href="#">S'inscrire</a></p>
             </div>
-            
+
             <ul>
-                <li><a href="#">Hébergements</a></li>
-                <li><a href="#">Activités</a></li>
+                <li><a href="#Hébergements">Hébergements</a></li>
+                <li><a href="#Activités">Activités</a></li>
             </ul>
         </div>
     </header>
 </body>
+
 </html>
