mise en place du header tablette

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header class="header">
+        <!--header desktop-->
         <p class="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
         <nav class="header__nav ">
             <ul>
@@ -21,6 +22,7 @@
                 <li><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
+        <!--header smartphone-->
         <div class="mobile">
             <div class="mobile__header">
                 <img src="images/logo/Reservia@3x.png" alt="">
@@ -33,6 +35,10 @@
             </ul>
         </div>
     </header>
+    <div class="premierParagraphe">
+        <p>Trouvez votre hébergement pour des vacances de rêve</p>
+        <p>En plein centre ville ou en pleine nature</p>
+    </div>
 </body>
 
 </html>
