finition search mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="search">
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
-        <button>Rechercher</button>
+        <button class="fas fa-search"></button>
     </div>
 </body>
 
