search tablette et desktop terminé

--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
         <p>Trouvez votre hébergement pour des vacances de rêve</p>
         <p>En plein centre ville ou en pleine nature</p>
     </div>
+    <!--barre de recherche tablette et desktop-->
     <div class="search">
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
-        <button class="fas fa-search"></button>
+        <button>Rechercher</button>
+    </div>
+    <!--barre de recherche mobile-->
+    <div class="search--mobile">
+        <i class="fas fa-map-marker-alt"></i>
+        <input type="text" placeholder="Marseille,France">
+        <button  class="fas fa-search"></button>
     </div>
 </body>
 
