--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>        
     </header>
-    <!--
+    
     <div class="premierParagraphe">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <h2>En plein centre ville ou en pleine nature</h2>
@@ -36,10 +36,10 @@
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
         <button class="btn">Rechercher</button>
-        <span class="loupe"><i></i></span>
+        <span class="loupe"><i>g</i></span>
     </div>  
 
--->
+
     
 </body>
 
