--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
         <button class="btn">Rechercher</button>
-        <span class="loupe"><i>g</i></span>
+        <span class="loupe"><i></i></span>
     </div>  
 
 
