intégration d'une page 404

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="hébergements"><a href="#Hébergements">Hébergements</a></li>
                     <li class="activités"><a href="#Activités">Activités</a></li>
                 </div>                
-                <li class="inscription"><a href="#">S'inscrire</a></li>
+                <li class="inscription"><a href="404.html">S'inscrire</a></li>
             </ul>
         </nav>        
     </header>
@@ -32,12 +32,12 @@
         <h2>En plein centre ville ou en pleine nature</h2>
     </div>
     
-    <div class="search">
+    <form class="search">
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
         <button class="btn">Rechercher</button>
         <span class="loupe"><i></i></span>
-    </div>  
+    </form>  
 
 
     
