implémentation du code html pour les filtres

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
         <button class="loupe"><i class="fas fa-search"></i></button>
     </form>  
     </div>
-    
+    <div class="filters">
+        <p>Filters</p>
+        <div class="btnFilters">
+            <div class="btnBox"><i class="fas fa-money-bill-wave"></i>Économique</div>
+            <div class="btnBox"><i class="fas fa-child"></i>Familial</div>
+            <div class="btnBox"><i class="fas fa-heart"></i>Romantique</div>
+            <div class="btnBox"><i class="fas fa-dog"></i>Animaux autorisés</div>
+        </div>
+    </div>
     
 </body>
 
