--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </form>  
     </div>
     <div class="filters">
-        <p>Filters</p>
+        <p>Filtres</p>
         <div class="btnFilters">
             <div class="btnBox"><i class="fas fa-money-bill-wave"></i>Économique</div>
             <div class="btnBox"><i class="fas fa-child"></i>Familial</div>
