--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <div class="btnBox"><i class="fas fa-heart"></i>Romantique</div>
             <div class="btnBox"><i class="fas fa-dog"></i>Animaux autorisés</div>
         </div>
+        
+    </div>
+    <div class="i">
+        <i class="fas fa-info"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>.
     </div>
     
 </body>
