--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div></a>
             </div>
             <div class="vignette__container">
-                <a href=""><div class="vignette">
+                <a href="404.html"><div class="vignette">
                     <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
                     <h2>Hôtel du port</h2>
                     <p>Nuit à partir de 52€</p>
@@ -97,7 +97,7 @@
                 </div></a>
             </div>
             <div class="vignette__container">
-                <a href=""><div class="vignette">
+                <a href="404.html"><div class="vignette">
                     <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
                     <h2>Hôtel les mouettes</h2>
                     <p>Nuit à partir de 76€</p>
@@ -118,7 +118,7 @@
                 </div></a>
             </div>
             <div class="vignette__container">
-                <a href=""><div class="vignette">
+                <a href="404.html"><div class="vignette">
                     <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
                     <h2>Hôtel de la mer</h2>
                     <p>Nuit à partir de 46€</p>
@@ -139,7 +139,7 @@
                 </div></a>
             </div>
             <div class="vignette__container">
-                <a href=""><div class="vignette">
+                <a href="404.html"><div class="vignette">
                     <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
                     <h2>Auberge le panier</h2>
                     <p>Nuit à partir de 23€</p>
@@ -160,7 +160,7 @@
                 </div></a>
             </div>
             <div class="vignette__container">
-                <a href=""><div class="vignette">
+                <a href="404.html"><div class="vignette">
                     <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
                     <h2>Hôtel chez Amina</h2>
                     <p>Nuit à partir de 96€</p>
