header mobile fixé

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <header class="header">        
         <p class="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
         <nav class="header__nav ">
-            <ul>
-                <div class="mobile">
-                    <li class="hébergements"><a href="#Hébergements">Hébergements</a></li>
-                    <li class="activités"><a href="#Activités">Activités</a></li>
-                </div>                
-                <li class="inscription"><a href="404.html">S'inscrire</a></li>
+            <ul>                
+                <li id="hébergements"><a href="#Hébergements">Hébergements</a></li>
+                <li id="activités"><a href="#Activités">Activités</a></li>                             
+                <li id="inscription"><a href="404.html">S'inscrire</a></li>
             </ul>
         </nav>        
     </header>
