--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="i">
         <i class="fas fa-info"></i>
-        <p>Plus de 500 logements sont disponibles dans cette ville</p>.
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
     
         <section class="accomodation">
@@ -61,18 +61,13 @@
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
                         <h2>Auberge la Cannebière</h2>
                         <p>Nuit à partir de 25€</p>
-                        <div class="stars">
-                            <div class="blueStars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <div class="greyStars">
-                                <i class="fas fa-star"></i>
-                            </div>
-                            
-                        </div>
+                        <ul>
+                            <li> <i class="fas fa-star"></i></li>
+                            <li> <i class="fas fa-star"></i></li>
+                            <li> <i class="fas fa-star"></i></li>
+                            <li> <i class="fas fa-star"></i></li>
+                            <li> <i class="fas fa-star"></i></li>
+                        </ul>
 
                     </div></a>
                 </div>
