--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <form class="search">
         <i class="fas fa-map-marker-alt"></i>
         <input type="text" placeholder="Marseille,France">
-        <button class="btn">Rechercher</button>
+        <button class="btn" type="button">Rechercher</button>
         <button class="loupe"><i class="fas fa-search"></i></button>
     </form>  
     </div>
