section desktop finie

--- a/index.html
+++ b/index.html
@@ -61,13 +61,18 @@
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
                         <h2>Auberge la Cannebière</h2>
                         <p>Nuit à partir de 25€</p>
-                        <ul>
-                            <li> <i class="fas fa-star"></i></li>
-                            <li> <i class="fas fa-star"></i></li>
-                            <li> <i class="fas fa-star"></i></li>
-                            <li> <i class="fas fa-star"></i></li>
-                            <li> <i class="fas fa-star"></i></li>
-                        </ul>
+                        <div class="stars">
+                            <div class="blueStars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <div class="greyStars">
+                                <i class="fas fa-star"></i>
+                            </div>
+                            
+                        </div>
 
                     </div></a>
                 </div>
