--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                         </div></a>
                     </div>
                     <div class="vignette__container">
-                        <a href="404.html"><div class="vignette">
-                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                        <a href="404.html"><div class="vignette">                                       
+                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">                            
                             <h2>Hôtel du port</h2>
                             <p>Nuit à partir de 52€</p>
                             <div class="stars">
@@ -191,7 +191,7 @@
                 <div class="popular__container">
                     <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
                     <div class="popular__description">
-                        <h2>Hôtel Le soleil du matin</h2>
+                        <h2>Hôtel Le soleil du <br/>matin</h2>
                         <p>Nuit à partir de 128€</p>
                         <div class="stars">
                             <div class="blueStars">
@@ -208,7 +208,7 @@
                     <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
                     <div class="popular__description">
                         <h2>Aucoeur de l'eau<br/>Chambres d'hôtes</h2>
-                        <p>Nuit à partir 71€</p>
+                        <p>Nuit à partir de 71€</p>
                         <div class="stars">
                             <div class="blueStars">
                                 <i class="fas fa-star"></i>
@@ -224,9 +224,9 @@
                     </div>
                 </div>
                 <div class="popular__container">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                    <img id="img-resize" src="images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
                     <div class="popular__description">
-                        <h2>Hôtel Tout bleu et Blanc</h2>
+                        <h2>Hôtel Tout bleu et <br/>Blanc</h2>
                         <p>Nuit à partir de 68€</p>
                         <div class="stars">
                             <div class="blueStars">
