--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <header class="header">        
-        <p class="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
-        <nav class="header__nav ">
+    <header id="header">        
+        <p id="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
+        <nav id="header__nav">
             <ul>                
                 <li id="hébergements"><a href="#Hébergements">Hébergements</a></li>
                 <li id="activités"><a href="#Activités">Activités</a></li>                             
@@ -25,7 +25,7 @@
             </ul>
         </nav>        
     </header>
-    <div class="tablette">
+    <div id="tablette">
         <div class="premierParagraphe">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre ville ou en pleine nature</h2>
