modification du code html

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </nav>        
     </header>
     <div id="tablette">
-        <div class="premierParagraphe">
+        <div id="premierParagraphe">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre ville ou en pleine nature</h2>
         </div>
         
-        <form class="search">
+        <form id="search">
             <i class="fas fa-map-marker-alt"></i>
             <input type="text" placeholder="Marseille,France">
             <button class="btn" type="button">Rechercher</button>
