--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
         <div id="middle">
-            <section class="accomodation">
+            <section id="accomodation">
                 <h1>Hébergements à Marseille</h1>
                 <div class="accomodation__container">
                     
