fin du remaniement html + fin aside tous supports

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="loupe"><i class="fas fa-search"></i></button>
         </form>  
     </div>
-    <div class="filters">
+    <div id="filters">
         <p>Filtres</p>
         <div class="btnFilters">
             <div class="btnBox"><i class="fas fa-money-bill-wave"></i>Économique</div>
