--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+
     <header id="header">        
         <p id="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
         <nav id="header__nav">
@@ -25,6 +27,8 @@
             </ul>
         </nav>        
     </header>
+
+
     <div id="tablette">
         <div id="premierParagraphe">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -38,6 +42,8 @@
             <button class="loupe"><i class="fas fa-search"></i></button>
         </form>  
     </div>
+
+
     <div id="filters">
         <p>Filtres</p>
         <div class="btnFilters">
@@ -45,14 +51,19 @@
             <div class="btnBox"><i class="fas fa-child"></i>Familial</div>
             <div class="btnBox"><i class="fas fa-heart"></i>Romantique</div>
             <div class="btnBox"><i class="fas fa-dog"></i>Animaux autorisés</div>
-        </div>
-        
+        </div>        
     </div>
+
+
     <div class="i">
         <i class="fas fa-info"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
+
+
         <div id="middle">
+
+
             <section id="accomodation">
                 <h1>Hébergements à Marseille</h1>
                 <div class="accomodation__container">
@@ -183,6 +194,8 @@
                 </div>
                 <a href="404.html"> <h2>Afficher plus</h2></a>
             </section>
+
+
             <aside id="popular">
                 <div id="head__popular">
                     <h1>Les plus populaires</h1>
@@ -243,6 +256,40 @@
                 </div>
             </aside>
         </div>
+
+
+    <div id="activity">
+        <div class="activity__big">
+            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+            <h2>Vieux Port</h2>
+        </div>
+        <div class="activity__small">
+            <div id="pomegues">
+                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                <h2>Fort de Pomègues</h2>
+            </div>
+            <div id="frioul">
+                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                <h2>Îles du Frioul</h2>
+            </div>
+        </div>
+        <div class="activity__big">
+            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+            <h2>Parc National des Calanques</h2>
+        </div>
+        <div class="activity__small">
+            <div id="NDDLG">
+                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                <h2>Notre-Dame-de-la-Garde</h2>
+            </div>
+            <div id="longchamp">
+                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                <h2>Parc Longchamp</h2>                
+            </div>
+        </div>
+    </div>
+
+
        
 </body>
 
