avtivity desktop terminé

--- a/index.html
+++ b/index.html
@@ -257,18 +257,20 @@
             </aside>
         </div>
 
+    <h1 id=activity__h1>Activités à Marseille</h1>
 
     <div id="activity">
+        
         <div class="activity__big">
             <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
             <h2>Vieux Port</h2>
         </div>
         <div class="activity__small">
-            <div id="pomegues">
+            <div id="pomegues" class=activity__box>
                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                 <h2>Fort de Pomègues</h2>
             </div>
-            <div id="frioul">
+            <div id="frioul" class=activity__box>
                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                 <h2>Îles du Frioul</h2>
             </div>
@@ -278,11 +280,11 @@
             <h2>Parc National des Calanques</h2>
         </div>
         <div class="activity__small">
-            <div id="NDDLG">
+            <div id="NDDLG" class=activity__box>
                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                 <h2>Notre-Dame-de-la-Garde</h2>
             </div>
-            <div id="longchamp">
+            <div id="longchamp" class=activity__box>
                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                 <h2>Parc Longchamp</h2>                
             </div>
