--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div class="vignette">
                             <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
                             </div>
-                            <h2>Auberge le panier</h2>
+                            <h2>Auberge le Panier</h2>
                             <p>Nuit à partir de 23€</p>
                             <div class="stars">
                                 <div class="blueStars">
