--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
             <h2>Vieux Port</h2>
         </div>
         <div class="activity__small">
-            <div id="pomegues" class=activity__box>
+            <div class= "activity__box activity__box--pomegues">
                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                 <h2>Fort de Pomègues</h2>
             </div>
-            <div id="frioul" class=activity__box>
+            <div class= "activity__box activity__box--frioul">
                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                 <h2>Îles du Frioul</h2>
             </div>
@@ -252,12 +252,12 @@
             <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
             <h2>Parc National des Calanques</h2>
         </div>
-        <div class="activity__small">
-            <div id="NDDLG" class=activity__box>
+        <div class="activity__small ">
+            <div class= "activity__box activity__box--NDDLG">
                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                 <h2>Notre-Dame-de-la-Garde</h2>
             </div>
-            <div id="longchamp" class=activity__box>
+            <div class= "activity__box activity__box--longchamp">
                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                 <h2>Parc Longchamp</h2>                
             </div>
