footer desktop ok

--- a/index.html
+++ b/index.html
@@ -265,6 +265,27 @@
     </div>
 
 
+    <footer>
+        <div class="block block--about">
+            <h2>A propos</h2>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales de vente</p>
+            <p>Données et confidentialité</p>
+        </div>
+        <div class="block block--accomodations">
+            <h2>Nos hébergements</h2>
+            <p>Charte qualité</p>
+            <p>Soumettre votre hôtel</p>
+            
+        </div>
+        <div class="block block--help">
+            <h2>Assistance</h2>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>            
+        </div>
+    </footer>
+
+
        
 </body>
 
