--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p id="header__logo"><img src="images/logo/Reservia@3x.png" alt="logo de l'agence"></p>
         <nav id="header__nav">
             <ul>                
-                <li id="hébergements"><a href="#Hébergements">Hébergements</a></li>
-                <li id="activités"><a href="#Activités">Activités</a></li>                             
+                <li id="hébergements"><a href="#accomodation">Hébergements</a></li>
+                <li id="activités"><a href="#activity">Activités</a></li>                             
                 <li id="inscription"><a href="404.html">S'inscrire</a></li>
             </ul>
         </nav>        
