--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </div>
 
 
-    <div class="i">
-        <i class="fas fa-info"></i>
+    <div class="info">
+        <div><i class="fas fa-info"></i></div> 
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
 
