--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="smartphone.css">
-     <link rel="stylesheet" href="tab.css">
+    <link rel="stylesheet" href="tab.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> 
@@ -66,7 +66,7 @@
 
 
             <section id="accomodation">
-                <h1>Hébergements à Marseille</h1>
+                <div id=accomodation__title>Hébergements à Marseille</div>
                 <div class="accomodation__container">
                     
                     <div class="vignette__container">
@@ -176,7 +176,7 @@
 
             <aside id="popular">
                 <div id="head__popular">
-                    <h1>Les plus populaires</h1>
+                    <h2>Les plus populaires</h2>
                     <i class="fas fa-chart-line"></i>
                 </div>
                 
