--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
             <aside id="popular">
                 <div id="head__popular">
-                    <h2>Les plus populaires</h2>
+                    <div id="popular__title">Les plus populaires</div>  
                     <i class="fas fa-chart-line"></i>
                 </div>
                 
