--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div id="filters">
         <p>Filtres</p>
         <div class="btnFilters">
-            <div class="btnBox"><i class="fas fa-money-bill-wave"></i>Économique</div>
-            <div class="btnBox"><i class="fas fa-child"></i>Familial</div>
-            <div class="btnBox"><i class="fas fa-heart"></i>Romantique</div>
-            <div class="btnBox"><i class="fas fa-dog"></i>Animaux autorisés</div>
+            <div class="btnBox"><i class="fas fa-money-bill-wave"></i><p>Économique</p></div>
+            <div class="btnBox"><i class="fas fa-child"></i><p>Familial</p></div>
+            <div class="btnBox"><i class="fas fa-heart"></i><p>Romantique</p></div>
+            <div class="btnBox"><i class="fas fa-dog"></i><p>Animaux autorisés</p></div>
         </div>        
     </div>
 
