repositionnement des images desktop

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         
         <div  class="activity__big">
             <a href="404.html">  
-                <div id="box__img--vieuxPort">          
+                <div id="box__img--vieuxPort" class="activity__img--container">          
                     <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo du vieux port">
                 </div>    
                 <h2>Vieux Port</h2>
@@ -257,7 +257,7 @@
         <div class="activity__small">
             <a href="404.html">
                 <div class= "activity__box activity__box--pomegues">
-                    <div id="box__img--pomegues">
+                    <div id="box__img--pomegues" class="activity__img--container">
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo du fort de pomègues">
                     </div>
                     <h2>Fort de Pomègues</h2>                    
@@ -266,7 +266,7 @@
 
             <a href="404.html">
                 <div class= "activity__box activity__box--frioul">
-                    <div id="box__img--frioul">
+                    <div id="box__img--frioul"  class="activity__img--container">
                         <img src="images/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo des îles du frioul">
                     </div>
                     <h2>Îles du Frioul</h2>                    
@@ -276,7 +276,7 @@
                
         <div class="activity__big">
             <a href="404.html">
-                <div id="box__img--parc">
+                <div id="box__img--parc"  class="activity__img--container">
                     <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo du parc national des Calanques">
                 </div>
                 <h2>Parc National des Calanques</h2>
@@ -285,7 +285,7 @@
         <div class="activity__small ">
             <a href="404.html">
                 <div class= "activity__box activity__box--NDDLG">
-                    <div id="box__img--NDLG">
+                    <div id="box__img--NDLG"  class="activity__img--container">
                          <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de notre dame de la garde">
                     </div>
                     <h2>Notre-Dame-de-la-Garde</h2>
@@ -293,7 +293,7 @@
             </a>
             <a href="404.html">
                 <div class= "activity__box activity__box--longchamp">
-                    <div id="box__img--longchamp">
+                    <div id="box__img--longchamp"  class="activity__img--container">
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo du parc Longchamp">
                     </div>
                     <h2>Parc Longchamp</h2>                
