chargement media querry dans le html + changement nom de classe tablette en top

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="smartphone.css">
-    <link rel="stylesheet" href="tab.css">
+    <link rel="stylesheet" href="smartphone.css" media="screen and (min-width: 350px) and (max-width : 833px)">
+    <link rel="stylesheet" href="tab.css" media="screen and (min-width: 834px) and (max-width: 1415px) ">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> 
@@ -30,7 +30,7 @@
         </header>
 
 
-        <div id="tablette">
+        <div id="top">
             <div id="premierParagraphe">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <h2>En plein centre ville ou en pleine nature</h2>
