ajout de commentaires et réorganisation du code

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--liens vers les feuilles de style-->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="smartphone.css" media="screen and (min-width: 350px) and (max-width : 833px)">
+    <link rel="stylesheet" href="smartphone.css" media="screen and (max-width : 833px)">
     <link rel="stylesheet" href="tab.css" media="screen and (min-width: 834px) and (max-width: 1415px) ">
+    <!--liens vers google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
+    <!--lien vers fontawesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> 
+    <!--intégration du favicon-->
     <link rel="icon" href="images/logo/Reservia-svg.ico">
     <title>Projet2--Réservia</title>
 </head>
@@ -72,7 +76,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">
-                                <img src="images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo de l'auberge de la cannebière">
+                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo de l'auberge de la cannebière" loading="lazy">
                                 </div>
                                 <h2>Auberge la Cannebière</h2>
                                 <p>Nuit à partir de 25€</p>
@@ -89,7 +93,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">                                       
-                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de l'hôtel du port">                            
+                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de l'hôtel du port" loading="lazy">                            
                                 </div>
                                 <h2>Hôtel du port</h2>
                                 <p>Nuit à partir de 52€</p>
@@ -105,7 +109,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">
-                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de l'hôtel des mouettes">
+                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de l'hôtel des mouettes" loading="lazy">
                                 </div>
                                 <h2>Hôtel les mouettes</h2>
                                 <p>Nuit à partir de 76€</p>
@@ -121,7 +125,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">
-                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de l'hôtel dela mer">
+                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de l'hôtel dela mer" loading="lazy">
                                 </div>
                                 <h2>Hôtel de la mer</h2>
                                 <p>Nuit à partir de 46€</p>
@@ -138,7 +142,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">
-                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de l'auberge le panier">
+                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de l'auberge le panier" loading="lazy">
                                 </div>
                                 <h2>Auberge le Panier</h2>
                                 <p>Nuit à partir de 23€</p>
@@ -154,7 +158,7 @@
                         <div class="vignette__container">
                             <a href="404.html">
                                 <div class="vignette">                                    
-                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de l'hôtel chez Amina">
+                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de l'hôtel chez Amina" loading="lazy">
                                 </div>
                                 <h2>Hôtel chez Amina</h2>
                                 <p>Nuit à partir de 96€</p>
@@ -182,7 +186,7 @@
                     <a href="404.html">         
                         <div class="popular__container">                                                                      
                                 <div class="image__container">
-                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo de l'hôtel le soleil du matin">
+                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo de l'hôtel le soleil du matin" loading="lazy">
                                 </div>
                                 <div class="popular__description">
                                     <h2>Hôtel Le soleil du <br/>matin</h2>
@@ -202,7 +206,7 @@
                     <a href="404.html">
                         <div class="popular__container">                            
                             <div class="image__container">
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo de la chambre d'hôte au coeur de l'eau">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo de la chambre d'hôte au coeur de l'eau" loading="lazy">
                             </div>                    
                             <div class="popular__description">
                                 <h2>Au coeur de l'eau<br/>Chambres d'hôtes</h2>
@@ -222,7 +226,7 @@
                     <a href="404.html"> 
                         <div class="popular__container">                                               
                             <div class="image__container">                               
-                            <img class="img-resize" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo de l'hôtel tout bleu et blanc">
+                            <img  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo de l'hôtel tout bleu et blanc" loading="lazy">
                             </div>
                             <div class="popular__description">
                                 <h2>Hôtel Tout bleu et <br/>Blanc</h2>
@@ -248,7 +252,7 @@
             <div  class="activity__big">
                 <a href="404.html">  
                     <div id="box__img--vieuxPort" class="activity__img--container">          
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo du vieux port">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo du vieux port" loading="lazy">
                     </div>    
                     <h2>Vieux Port</h2>
                 </a>
@@ -258,7 +262,7 @@
                 <a href="404.html">
                     <div class= "activity__box activity__box--pomegues">
                         <div id="box__img--pomegues" class="activity__img--container">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo du fort de pomègues">
+                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo du fort de pomègues" loading="lazy">
                         </div>
                         <h2>Fort de Pomègues</h2>                    
                     </div>
@@ -267,7 +271,7 @@
                 <a href="404.html">
                     <div class= "activity__box activity__box--frioul">
                         <div id="box__img--frioul"  class="activity__img--container">
-                            <img src="images/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo des îles du frioul">
+                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo des îles du frioul" loading="lazy">
                         </div>
                         <h2>Îles du Frioul</h2>                    
                     </div>
@@ -277,7 +281,7 @@
             <div class="activity__big">
                 <a href="404.html">
                     <div id="box__img--parc"  class="activity__img--container">
-                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo du parc national des Calanques">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo du parc national des Calanques" loading="lazy">
                     </div>
                     <h2>Parc National des Calanques</h2>
                 </a>
@@ -286,7 +290,7 @@
                 <a href="404.html">
                     <div class= "activity__box activity__box--NDDLG">
                         <div id="box__img--NDLG"  class="activity__img--container">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de notre dame de la garde">
+                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de notre dame de la garde" loading="lazy">
                         </div>
                         <h2>Notre-Dame-de-la-Garde</h2>
                     </div>
@@ -294,7 +298,7 @@
                 <a href="404.html">
                     <div class= "activity__box activity__box--longchamp">
                         <div id="box__img--longchamp"  class="activity__img--container">
-                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo du parc Longchamp">
+                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo du parc Longchamp" loading="lazy">
                         </div>
                         <h2>Parc Longchamp</h2>                
                     </div>
