footer grand écrans

--- a/index.html
+++ b/index.html
@@ -308,22 +308,24 @@
     </main>
 
     <footer>
-        <div class="block block--about">
-            <h2>A propos</h2>
-            <p><a href="404.html">Fonctionnement du site</a></p>
-            <p><a href="404.html"> Conditions générales de vente</a></p>
-            <p><a href="404.html"> Données et confidentialité</a></p>
-        </div>
-        <div class="block block--accomodations">
-            <h2>Nos hébergements</h2>
-            <p><a href="404.html"> Charte qualité</a></p>
-            <p><a href="404.html"> Soumettre votre hôtel</a></p>
-            
-        </div>
-        <div class="block block--help">
-            <h2>Assistance</h2>
-            <p><a href="404.html"> Centre d'aide</a></p>
-            <p><a href="404.html"> Nous contacter</a></p>            
+        <div class="container">
+            <div class="block block--about">
+                <h2>A propos</h2>
+                <p><a href="404.html">Fonctionnement du site</a></p>
+                <p><a href="404.html"> Conditions générales de vente</a></p>
+                <p><a href="404.html"> Données et confidentialité</a></p>
+            </div>
+            <div class="block block--accomodations">
+                <h2>Nos hébergements</h2>
+                <p><a href="404.html"> Charte qualité</a></p>
+                <p><a href="404.html"> Soumettre votre hôtel</a></p>
+                
+            </div>
+            <div class="block block--help">
+                <h2>Assistance</h2>
+                <p><a href="404.html"> Centre d'aide</a></p>
+                <p><a href="404.html"> Nous contacter</a></p>            
+            </div>
         </div>
     </footer>
 
